--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@ body{font-family: Didact Gothic;}blockquote{border-color: #0072ce;}div[submit-su
                     <p class="mbr-text mbr-fonts-style mbr-white mbr-pt-2 display-7"><br>BBS is a high-octane side scrolling brawler packed to the brim with adults-only content. Every enemy you encounter is out for you in more ways than one. Tackle 6 unique stages ranging from the corrupt underbelly of the city, to the tropical jungle and it's hidden ancient prophecy.
 <br>
 <br>Only you and your co-op buddies have the staying power to undo this curse before it takes over the entire city!<br></p>
-                    <div class="mbr-section-btn mbr-pt-4"><a class="btn btn-info display-7">SUPPORT GAME</a> <a class="btn btn-primary display-7">LEARN MORE</a></div>
+                    <div class="mbr-section-btn mbr-pt-4"><a class="btn btn-info display-7" href="page4.html">SUPPORT GAME</a> <a class="btn btn-primary display-7" href="page1.html">LEARN MORE</a></div>
                 </div>
             </div>
             <div class="image-wrap mbr-col-md-12 mbr-col-sm-12 mbr-col-lg-6 mbr-flex">
                 <div class="image-block mbr-col-md-12 mbr-col-sm-12 mbr-m-auto">
-                    <amp-img src="assets/images/8afe828586893ac1eb164bb4259ef3c7-jpg-1152x652.jpg" layout="responsive" width="902.8711656441718" height="511" alt="image" class="mobirise-loader">
+                    <amp-img src="assets/images/8afe828586893ac1eb164bb4259ef3c7-jpg-1152x652.jpg" layout="responsive" width="890.5030674846626" height="504" alt="image" class="mobirise-loader">
                         <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -156,7 +156,7 @@ body{font-family: Didact Gothic;}blockquote{border-color: #0072ce;}div[submit-su
             
         <p class="mbr-text fLink mbr-px-1 mbr-white"><a href="index.html#header2-3" class="text-white">D</a>iscord</p><p class="mbr-text fLink mbr-px-1 mbr-white"><a href="index.html#features3-2" class="text-white">P</a>atreon</p><p class="mbr-text fLink mbr-px-1 mbr-white"><a href="index.html#video1-7" class="text-white">YouTube</a></p></div>
         <div class="copyright mbr-px-2 mbr-flex mbr-jc-c">
-            <p class="mbr-text mbr-fonts-style mbr-white align-center display-7">© Copyright 2019 Bare Backstreets&nbsp;- All Rights Reserved</p>
+            <p class="mbr-text mbr-fonts-style mbr-white align-center display-7">Â© Copyright 2019 Bare Backstreets&nbsp;- All Rights Reserved</p>
         </div>
     </div>
 </section>
