--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body{font-family: Didact Gothic;}blockquote{border-color: #0072ce;}div[submit-su
             </div>
             <div class="image-wrap mbr-col-md-12 mbr-col-sm-12 mbr-col-lg-6 mbr-flex">
                 <div class="image-block mbr-col-md-12 mbr-col-sm-12 mbr-m-auto">
-                    <amp-img src="assets/images/8afe828586893ac1eb164bb4259ef3c7-jpg-1152x652.jpg" layout="responsive" width="890.5030674846626" height="504" alt="image" class="mobirise-loader">
+                    <amp-img src="assets/images/8afe828586893ac1eb164bb4259ef3c7-jpg-1152x652.jpg" layout="responsive" width="576" height="326" alt="image" class="mobirise-loader">
                         <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
