--- a/page2.html
+++ b/page2.html
@@ -63,7 +63,7 @@ body{font-family: Didact Gothic;}blockquote{border-color: #0072ce;}div[submit-su
 			<!-- SHOW LOGO -->
 			<div class="navbar-brand">
 				<div class="navbar-logo">
-					<amp-img src="assets/images/bbs-avatar.gif" layout="responsive" height="55" width="55" alt="image" class="mobirise-loader">
+					<amp-img src="assets/images/bbs-avatar.gif" layout="responsive" height="70" width="70" alt="image" class="mobirise-loader">
 						<div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -126,7 +126,7 @@ body{font-family: Didact Gothic;}blockquote{border-color: #0072ce;}div[submit-su
                 <div class="card-wrapper mbr-flex">
                     <div class="card-img mbr-col-md-6">
                         <div class="img-overlay"></div>
-                        <amp-img class="mobirise-loader" src="assets/images/digital-vector-icon-538x538.png" layout="responsive" width="269.66749379652606" height="202" alt="image">
+                        <amp-img class="mobirise-loader" src="assets/images/digital-vector-icon-538x538.png" layout="responsive" width="279.0124069478908" height="209" alt="image">
                             <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -156,7 +156,7 @@ body{font-family: Didact Gothic;}blockquote{border-color: #0072ce;}div[submit-su
                 <div class="card-wrapper mbr-flex">
                     <div class="card-img mbr-col-md-6">
                         <div class="img-overlay"></div>
-                        <amp-img class="mobirise-loader" src="assets/images/image0-538x538.png" layout="responsive" width="269.66749379652606" height="202" alt="image">
+                        <amp-img class="mobirise-loader" src="assets/images/image0-538x538.png" layout="responsive" width="279.0124069478908" height="209" alt="image">
                             <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -168,7 +168,7 @@ body{font-family: Didact Gothic;}blockquote{border-color: #0072ce;}div[submit-su
                     </div>
                     <div class="card-box mbr-pt-3 mbr-px-4 mbr-pb-3">
                         <h3 class="card-title mbr-bold mbr-fonts-style mbr-white display-5">Kabier</h3>
-                        <h4 class="mbr-bold mbr-fonts-style mbr-pt-3 mbr-custom info display-4">Founder</h4>
+                        <h4 class="mbr-bold mbr-fonts-style mbr-pt-3 mbr-custom info display-4">Lead Artist</h4>
                         
                         <div class="icons-list mbr-pt-4">
                             
@@ -186,7 +186,7 @@ body{font-family: Didact Gothic;}blockquote{border-color: #0072ce;}div[submit-su
                 <div class="card-wrapper mbr-flex">
                     <div class="card-img mbr-col-md-6">
                         <div class="img-overlay"></div>
-                        <amp-img class="mobirise-loader" src="assets/images/c1f85664b2b7e774a470f745657a3a00-538x463.png" layout="responsive" width="268.41614906832297" height="201" alt="image">
+                        <amp-img class="mobirise-loader" src="assets/images/c1f85664b2b7e774a470f745657a3a00-538x463.png" layout="responsive" width="279.09937888198755" height="209" alt="image">
                             <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
@@ -216,7 +216,7 @@ body{font-family: Didact Gothic;}blockquote{border-color: #0072ce;}div[submit-su
                 <div class="card-wrapper mbr-flex">
                     <div class="card-img mbr-col-md-6">
                         <div class="img-overlay"></div>
-                        <amp-img class="mobirise-loader" src="assets/images/1555895941.zeex12-picsart-04-08-09.53.00-538x523.jpeg" layout="responsive" width="268.41614906832297" height="201" alt="image">
+                        <amp-img class="mobirise-loader" src="assets/images/1555895941.zeex12-picsart-04-08-09.53.00-538x523.jpeg" layout="responsive" width="279.09937888198755" height="209" alt="image">
                             <div placeholder="" class="placeholder">
                                 <div class="mobirise-spinner">
                                     <em></em>
